# floaty-boaty-go-go

./: .gitignore  Build.bat  BuildAssetDatabase.bat  CMakeLists.txt  DeleteAssetDatabase.bat  LICENSE  Prepare.bat  README.md  Run.bat  project_config.h.in
assets/: logicfactories.cpp  logicfactories.hpp  settings.json
assets/Logic/Effects/: MeshRandomizer.cpp  MeshRandomizer.hpp  OverlayImage.cpp  OverlayImage.hpp  PropellerRotator.cpp  PropellerRotator.hpp  Rotator.cpp  Rotator.hpp  TurbulenceWobble.cpp  TurbulenceWobble.hpp
assets/Logic/Effects/PostProcess/: FXAA.cpp  FXAA.hpp
assets/Logic/Environment/: ChangeScene.cpp  ChangeScene.hpp  Island.cpp  Island.hpp  Water.cpp  Water.hpp
assets/Logic/Game/: AIControls.cpp  AIControls.hpp  FreeFlight.cpp  FreeFlight.hpp  PlayerControls.cpp  PlayerControls.hpp  ShipMovement.cpp  ShipMovement.hpp  ShipSpawner.cpp  ShipSpawner.hpp  Torpedo.cpp  Torpedo.hpp  WeaponsController.cpp  WeaponsController.hpp
assets/Logic/Test/: TextDisplay.cpp  TextDisplay.hpp
assets/Resources/Fonts/: defualt.font.json
assets/Resources/Materials/: airship.json  balloon.json  balloon_player.json  island.json  torpedo.json  water.json
assets/Resources/Materials/PostProcess/: FXAA.json
assets/Resources/Models/: torpedo.fbx  torpedo_propellar.fbx
assets/Resources/Models/Airships/: Balloon_HotAir.fbx  Balloon_Zeppelin.fbx  End_Boat.fbx  End_Nautilus.fbx  End_Submarine.fbx  Front_Boat.fbx  Front_Nautilus.fbx  Front_Submarine.fbx  House_Boat.fbx  House_Nautilus.fbx  House_Submarine.fbx  Mid_section.fbx  Misc_DoubleWing.fbx  Misc_PropellerWing.fbx  Misc_Tires.fbx  Propeller_Submarine.fbx  Propeller_Wing.fbx
assets/Resources/Prefabs/: cube.json  roamership.json  torpedo.json
assets/Resources/Shaders/: skybox.fragment.glsl  skybox.shader.json  skybox.vertex.glsl  standard.fragment.glsl  standard.shader.json  standard.vertex.glsl
assets/Resources/Shaders/UI/: text.fragment.glsl  text.shader.json  text.vertex.glsl
assets/Resources/Shaders/builtin/: blit.fragment.glsl  blit.shader.json  blit.vertex.glsl  common.glsl  error.fragment.glsl  error.shader.json  error.vertex.glsl  noise.glsl  simple.glsl  simple2.glsl
assets/Resources/Shaders/lighting/: lighting.glsl  standardlightinput.glsl
assets/Resources/Shaders/postprocess/: fxaa.fragment.glsl  fxaa.include.glsl  fxaa.shader.json  fxaa.vertex.glsl
assets/Resources/Shaders/screen/: overlay.fragment.glsl  overlay.shader.json  overlay.vertex.glsl
assets/Resources/Shaders/terrain/: island.fragment.glsl  island.shader.json  island.vertex.glsl  water.fragment.glsl  water.shader.json  water.vertex.glsl
assets/Resources/Textures/Skybox/: skybox.json
assets/Scenes/: RotateTestScene.json  TestScene.json  cubetest.json  main.json  menu.json  select_boat.json  watertest.json
src/: CMakeLists.txt  application.cpp  application.hpp  assetdatabase.cpp  assetdatabase.hpp  definitions.hpp  delegate.cpp  delegate.hpp  ecs.cpp  ecs.hpp  folderwatcher.cpp  folderwatcher.hpp  includeglew.hpp  input.cpp  input.hpp  logic.cpp  logic.hpp  main.cpp  rect.cpp  rect.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp  util.cpp  util.hpp
src/AssetLoading/: CMakeLists.txt  assetdependencytracker.cpp  assetdependencytracker.hpp  assets.hpp  cameracomponent.cpp  cameracomponent.hpp  cubemapasset.cpp  cubemapasset.hpp  fontasset.cpp  fontasset.hpp  materialasset.cpp  materialasset.hpp  meshasset.cpp  meshasset.hpp  meshrendercomponent.cpp  meshrendercomponent.hpp  sceneasset.cpp  sceneasset.hpp  shaderasset.cpp  shaderasset.hpp  spherecollidercomponent.cpp  spherecollidercomponent.hpp  textasset.cpp  textasset.hpp  textureasset.cpp  textureasset.hpp  transformcomponent.cpp  transformcomponent.hpp
src/Graphics/: CMakeLists.txt  camera.cpp  camera.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  graphicsutils.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  meshrenderer.cpp  meshrenderer.hpp  openglstate.cpp  openglstate.hpp  postprocess.cpp  postprocess.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shaderpreprocessor.cpp  shaderpreprocessor.hpp  texture.cpp  texture.hpp
src/Physics/: CMakeLists.txt  collider.cpp  collider.hpp  collision.hpp  physics.cpp  physics.hpp
src/Serialization/: CMakeLists.txt  jsonserializer.cpp  jsonserializer.hpp  serialization.cpp  serialization.hpp
tools/: AssetBase.py  AssetDatabaseBuilder.py  AssetFont.py  AssetGLSL.py  AssetJSON.py  AssetLogic.py  AssetMesh.py  AssetTexture.py  AssetTypes.py  CreateNewLogicComponent.py  CreateNewSource.py  DeleteMetaFiles.py
